super node added

--- a/Training_DiffSize_BA_Graph.ipynb
+++ b/Training_DiffSize_BA_Graph.ipynb
@@ -182,7 +182,7 @@
     "def gen_new_graphs():\n",
     "    graph_type = ['erdos_renyi', 'powerlaw','small-world', 'barabasi_albert']\n",
     "    a =  'barabasi_albert'#np.random.choice(graph_type)\n",
-    "    number_nodes = random.randint(35,50)\n",
+    "    number_nodes = random.randint(30,50)\n",
     "    graph = gen_graph(number_nodes, a)\n",
     "    add_super_node(graph)\n",
     "    active = 1\n",
@@ -315,7 +315,7 @@
     "      self.Graph = gen_new_graphs()\n",
     "      self.info_state = utils.from_networkx(self.Graph)\n",
     "      self.info_state.x = features(self.Graph)\n",
-    "      self.lcc = [len(max(nx.connected_components(self.Graph), key=len))]\n",
+    "      self.lcc = [get_lcc(self.Graph)]\n",
     "      self.r = []\n",
     "      self.alpha = (1-nx.density(self.Graph))\n",
     "      self.beta = [molloy_reed(self.Graph)]\n",
@@ -361,22 +361,22 @@
     "  degs = np.delete(all_degree,-1)\n",
     "  k = degs[:-1].mean()\n",
     "  k2 = np.mean(degs[:-1] ** 2)\n",
-    "  if k ==0:\n",
+    "  '''if k ==0:\n",
     "    beta = 0\n",
-    "  else:\n",
-    "    beta = k2/k\n",
+    "  else:'''\n",
+    "  beta = k2/k\n",
     "  return beta\n",
     "\n",
     "def features(g):\n",
     "    degree_centrality = list(nx.degree_centrality(g).values())\n",
-    "    #precolation_centrality = list(nx.percolation_centrality(g).values())\n",
+    "    precolation_centrality = list(nx.percolation_centrality(g,attribute='active').values())\n",
     "    #closeness_centrality = list(nx.closeness_centrality(g).values())\n",
     "    eigen_centrality = list(nx.eigenvector_centrality(g,tol=1e-03).values())\n",
     "    clustering_coeff = list(nx.clustering(g).values())\n",
     "    core_num = list(nx.core_number(g).values())\n",
     "    pagerank = list(nx.pagerank(g).values())\n",
     "    #x = np.column_stack((degree_centrality,clustering_coeff,pagerank, core_num ))\n",
-    "    x = np.column_stack((degree_centrality,eigen_centrality,pagerank,clustering_coeff, core_num ))\n",
+    "    x = np.column_stack((degree_centrality,precolation_centrality,eigen_centrality,pagerank,clustering_coeff, core_num ))\n",
     "    scaler = StandardScaler()\n",
     "    #print('x',x)\n",
     "    x_normed = scaler.fit_transform(x)#Standardize features\n",
@@ -2049,7 +2049,7 @@
     "\n",
     "# Training parameters\n",
     "save_every= int(1e4)                #\"Episode frequency at which the DQN agent models are saved.\")\n",
-    "num_train_episodes = int(2e5)       #\"Number of training episodes.\")\n",
+    "num_train_episodes = int(1e5)       #\"Number of training episodes.\")\n",
     "eval_every = int(1e3)       #\"Episode frequency at which the DQN agents are evaluated.\")\n",
     "\n",
     "# DQN model hyper-parameters\n",
@@ -2063,10 +2063,10 @@
     "min_buffer_size_to_learn=1000\n",
     "epsilon_start=1.0\n",
     "epsilon_end=0.15\n",
-    "epsilon_decay_duration=int(5e6)# => for 200k # #int(2e6)# => for 100k \n",
+    "epsilon_decay_duration=int(2e6)# => for 100k #int(5e6)# => for 200k\n",
     "\n",
     "# WandB – Initialize a new run\n",
-    "wandb.init(entity=\"bhandk\", project=\"Attack_and_Defense_Same_Graph_Type\",name=\"May30, 2022\")\n",
+    "wandb.init(entity=\"bhandk\", project=\"Attack_and_Defense_Same_Graph_Type\",name=\"Jun04, 2022\")\n",
     "wandb.watch_called = False # Re-run the model without restarting the runtime, unnecessary after our next release\n",
     "# WandB – Config is a variable that holds and saves hyperparameters and inputs\n",
     "config = wandb.config          # Initialize config\n",
@@ -2085,7 +2085,7 @@
     "def main(agents=None):\n",
     "    game = \"graph_attack_defend\"\n",
     "    env = Environment(game)\n",
-    "    feature_size = 5\n",
+    "    feature_size = 6\n",
     "    num_actions = env.action_spec()[\"num_actions\"]  \n",
     "    hidden_layers_sizes = hidden_layers\n",
     "    #device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
