3 centrality node with constant epsilon

--- a/Synthetic_Evaluation.ipynb
+++ b/Synthetic_Evaluation.ipynb
@@ -20,8 +20,8 @@
      "text": [
       "Requirement already satisfied: open_spiel in /home/bhandk/.local/lib/python3.8/site-packages (1.1.1)\n",
       "Requirement already satisfied: attrs>=19.3.0 in /home/bhandk/.local/lib/python3.8/site-packages (from open_spiel) (21.4.0)\n",
-      "Requirement already satisfied: numpy>=1.21.5 in /home/bhandk/.local/lib/python3.8/site-packages (from open_spiel) (1.22.2)\n",
       "Requirement already satisfied: absl-py>=0.10.0 in /home/bhandk/.local/lib/python3.8/site-packages (from open_spiel) (1.0.0)\n",
+      "Requirement already satisfied: numpy>=1.21.5 in /home/bhandk/.local/lib/python3.8/site-packages (from open_spiel) (1.22.2)\n",
       "Requirement already satisfied: pip>=20.0.2 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from open_spiel) (21.2.4)\n",
       "Requirement already satisfied: scipy>=1.7.3 in /home/bhandk/.local/lib/python3.8/site-packages (from open_spiel) (1.8.0)\n",
       "Requirement already satisfied: six in /home/bhandk/.local/lib/python3.8/site-packages (from absl-py>=0.10.0->open_spiel) (1.16.0)\n"
@@ -52,21 +52,21 @@
       "Requirement already satisfied: torch-spline-conv in /home/bhandk/.local/lib/python3.8/site-packages (1.2.1)\n",
       "Requirement already satisfied: torch-geometric in /home/bhandk/.local/lib/python3.8/site-packages (2.0.4)\n",
       "Requirement already satisfied: scipy in /home/bhandk/.local/lib/python3.8/site-packages (from torch-sparse) (1.8.0)\n",
-      "Requirement already satisfied: numpy in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (1.22.2)\n",
       "Requirement already satisfied: requests in /home/bhandk/miniconda3/lib/python3.8/site-packages (from torch-geometric) (2.27.1)\n",
-      "Requirement already satisfied: tqdm in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (4.63.0)\n",
       "Requirement already satisfied: scikit-learn in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (1.0.2)\n",
+      "Requirement already satisfied: pandas in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (1.4.1)\n",
+      "Requirement already satisfied: tqdm in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (4.63.0)\n",
       "Requirement already satisfied: pyparsing in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (3.0.7)\n",
       "Requirement already satisfied: jinja2 in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (3.0.3)\n",
-      "Requirement already satisfied: pandas in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (1.4.1)\n",
+      "Requirement already satisfied: numpy in /home/bhandk/.local/lib/python3.8/site-packages (from torch-geometric) (1.22.2)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /home/bhandk/.local/lib/python3.8/site-packages (from jinja2->torch-geometric) (2.1.0)\n",
       "Requirement already satisfied: pytz>=2020.1 in /home/bhandk/.local/lib/python3.8/site-packages (from pandas->torch-geometric) (2021.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/bhandk/.local/lib/python3.8/site-packages (from pandas->torch-geometric) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in /home/bhandk/.local/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas->torch-geometric) (1.16.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from requests->torch-geometric) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from requests->torch-geometric) (2022.5.18.1)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from requests->torch-geometric) (1.26.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from requests->torch-geometric) (2022.5.18.1)\n",
       "Requirement already satisfied: charset-normalizer~=2.0.0 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from requests->torch-geometric) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/bhandk/miniconda3/lib/python3.8/site-packages (from requests->torch-geometric) (3.3)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/bhandk/.local/lib/python3.8/site-packages (from scikit-learn->torch-geometric) (3.1.0)\n",
       "Requirement already satisfied: joblib>=0.11 in /home/bhandk/.local/lib/python3.8/site-packages (from scikit-learn->torch-geometric) (1.1.0)\n"
      ]
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "eb84cd98",
    "metadata": {},
    "outputs": [],
@@ -1224,11 +1224,12 @@
     "    #precolation_centrality = list(nx.percolation_centrality(g,attribute='active').values())\n",
     "    #closeness_centrality = list(nx.closeness_centrality(g).values())\n",
     "    eigen_centrality = list(nx.eigenvector_centrality(g,tol=1e-03).values())\n",
-    "    clustering_coeff = list(nx.clustering(g).values())\n",
-    "    core_num = list(nx.core_number(g).values())\n",
+    "    #clustering_coeff = list(nx.clustering(g).values())\n",
+    "    #core_num = list(nx.core_number(g).values())\n",
     "    pagerank = list(nx.pagerank(g).values())\n",
     "    #x = np.column_stack((degree_centrality,clustering_coeff,pagerank, core_num ))\n",
-    "    x = np.column_stack((degree_centrality,eigen_centrality,pagerank,clustering_coeff, core_num ))\n",
+    "    #x = np.column_stack((degree_centrality,eigen_centrality,pagerank,clustering_coeff, core_num ))\n",
+    "    x = np.column_stack((degree_centrality,eigen_centrality,pagerank))\n",
     "    return x\n",
     "\n",
     "def features(g): \n",
@@ -1238,8 +1239,8 @@
     "    #x[:-1,:] =x_actual\n",
     "    scaler = StandardScaler()\n",
     "    x_normed = scaler.fit_transform(x)#Standardize features\n",
-    "    active_nodes =  np.where(np.array(list(g.nodes(data=\"active\")))[:,1] == 0)[0]\n",
-    "    x_normed[active_nodes,:]=np.zeros(np.shape(x_normed)[1])\n",
+    "    #active_nodes =  np.where(np.array(list(g.nodes(data=\"active\")))[:,1] == 0)[0]\n",
+    "    #x_normed[active_nodes,:]=np.zeros(np.shape(x_normed)[1])\n",
     "    x = torch.from_numpy(x_normed.astype(np.float32))\n",
     "    return x\n",
     "\n",
@@ -1273,12 +1274,14 @@
     "def AUC_evaluation(attacker_differentGraph,attacker_BATypeGraph,attacker_ERTypeGraph,attacker_SWTypeGraph):    \n",
     "    file_list = []\n",
     "    number = [0,1] \n",
-    "    graph_type = ['erdos_renyi','small-world', 'barabasi_albert']\n",
+    "    #graph_type = ['erdos_renyi','small-world', 'barabasi_albert']\n",
+    "    graph_type = ['erdos_renyi','barabasi_albert']\n",
+    "    #graph_type = ['barabasi_albert']\n",
     "    noderange = [30, 50, 100, 500]\n",
-    "    for graphtype in graph_type:\n",
-    "        for nodesize in noderange:\n",
-    "            for num in numbers:\n",
-    "                file_list.append(graphtype+'_'+str(nodesize)+'_'+str(number))\n",
+    "    for num in number:\n",
+    "        for graphtype in graph_type:\n",
+    "            for nodesize in noderange:\n",
+    "                file_list.append(graphtype+'_'+str(nodesize)+'_'+str(num))\n",
     "    path = \"./FINDER/\"\n",
     "    #GRAPH_MEASURE= ['density','resilience','heterogeneity','gini','entropy','transitivity'] \n",
     "    CENTRALITY_MEASURE= ['degree_centrality','eigen_centrality','pagerank','clustering_coefficient','core_number'] \n",
@@ -1392,15 +1395,15 @@
     "            self.info_state = utils.from_networkx(self.Graph)\n",
     "            self.info_state.x = features(self.Graph)\n",
     "            self.global_feature = None#global_feature(self.Graph)\n",
-    "            beta = molloy_reed(self.Graph)\n",
-    "            if beta == 0:\n",
-    "              beta = self.beta[-1]\n",
+    "            #beta = molloy_reed(self.Graph)\n",
+    "            #if beta == 0:\n",
+    "            #  beta = self.beta[-1]\n",
     "            reward_1 = (self.lcc[-1] - l)/self.lcc[-1]\n",
-    "            reward_2 = (self.beta[-1] - beta)/self.beta[-1]\n",
-    "            self._rewards[0] = ((self.num_nodes-len(self.lcc))/self.num_nodes)* (self.alpha * reward_1 +(1-self.alpha)*reward_2)\n",
+    "            #reward_2 = (self.beta[-1] - beta)/self.beta[-1]\n",
+    "            self._rewards[0] = reward_1#((self.num_nodes-len(self.lcc))/self.num_nodes)* (self.alpha * reward_1 +(1-self.alpha)*reward_2)\n",
     "            self._rewards[1] = -self._rewards[0]\n",
     "            self._returns += self._rewards\n",
-    "            self.beta.append(beta)  \n",
+    "            #self.beta.append(beta)  \n",
     "            self.lcc.append(l)\n",
     "            self.r.append(self._rewards[0])\n",
     "            self._is_terminal = cond\n",
@@ -1470,7 +1473,7 @@
     "        game = game_name \n",
     "        env = Environment(game)\n",
     "        num_actions = env.action_spec()[\"num_actions\"]\n",
-    "        attacker = DQN(player_id=0,state_representation_size=5,hidden_layers_sizes= [5,5,3],global_feature_size =0,num_actions=num_actions)\n",
+    "        attacker = DQN(player_id=0,state_representation_size=3,hidden_layers_sizes= [5,5,6],global_feature_size =0,num_actions=num_actions)\n",
     "        # Attacker trained alone\n",
     "        if attacker_differentGraph != None:\n",
     "            attacker._q_network.load_state_dict(attacker_differentGraph[\"_q_network\"])\n",
@@ -1513,11 +1516,11 @@
     "        #print(\"FINDER [BA model]\",actions)\n",
     "        \n",
     "        #Compute Area under the curve\n",
-    "        x =  np.arange(_NUM_CELLS)[_NUM_CELLS:0:-1]/_NUM_CELLS\n",
-    "        auc_differentGraph = area_under_curve(x[:len(lcc_differentGraph)],lcc_differentGraph)\n",
-    "        auc_BAGraph = area_under_curve(x[:len(lcc_BAGraph)],lcc_BAGraph)\n",
-    "        auc_ERGraph = area_under_curve(x[:len(lcc_ERGraph)],lcc_ERGraph)\n",
-    "        auc_SWGraph = area_under_curve(x[:len(lcc_SWGraph)],lcc_SWGraph)\n",
+    "        x =  np.flip(np.arange(_NUM_CELLS)[_NUM_CELLS:0:-1]/_NUM_CELLS)\n",
+    "        auc_differentGraph = float('inf') if attacker_differentGraph == None else area_under_curve(x[:len(lcc_differentGraph)],lcc_differentGraph)\n",
+    "        auc_BAGraph = float('inf') if attacker_BATypeGraph == None else area_under_curve(x[:len(lcc_BAGraph)],lcc_BAGraph)\n",
+    "        auc_ERGraph = float('inf') if attacker_ERTypeGraph == None else area_under_curve(x[:len(lcc_ERGraph)],lcc_ERGraph)\n",
+    "        auc_SWGraph = float('inf') if attacker_SWTypeGraph == None else area_under_curve(x[:len(lcc_SWGraph)],lcc_SWGraph)\n",
     "        auc_Finder = area_under_curve(x[:len(lcc_Finder)],lcc_Finder)\n",
     "        auc_Random = area_under_curve(x[:len(lcc_random)],lcc_random)\n",
     "        AUC.append([name, auc_differentGraph,auc_BAGraph,auc_ERGraph,auc_SWGraph,auc_Finder,auc_Random])\n",
@@ -1535,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "5da1ef6c",
    "metadata": {
     "scrolled": false
@@ -1545,48 +1548,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['erdos_renyi_30_0' '10.548387096774196' '11.112903225806452'\n",
-      "  '10.903225806451614' '13.467741935483872' '10.112903225806452' '13.5']\n",
-      " ['erdos_renyi_50_0' '19.85294117647059' '20.57843137254902'\n",
-      "  '19.970588235294116' '21.16666666666667' '19.84313725490196'\n",
-      "  '23.941176470588232']\n",
-      " ['erdos_renyi_100_0' '45.4059405940594' '45.990099009900995'\n",
-      "  '48.45544554455446' '48.62376237623762' '44.524752475247524'\n",
-      "  '48.86138613861386']\n",
-      " ['erdos_renyi_500_0' '247.00598802395209' '247.00598802395209'\n",
-      "  '247.00598802395209' '247.00598802395209' '246.90319361277443'\n",
-      "  '247.00598802395209']\n",
-      " ['small-world_30_0' '11.370967741935486' '12.370967741935486'\n",
-      "  '11.20967741935484' '11.435483870967744' '10.887096774193548'\n",
-      "  '12.661290322580648']\n",
-      " ['small-world_50_0' '18.009803921568626' '17.421568627450977'\n",
-      "  '16.696078431372545' '16.441176470588236' '16.813725490196077'\n",
-      "  '22.460784313725487']\n",
-      " ['small-world_100_0' '33.524752475247524' '39.10891089108912'\n",
-      "  '30.599009900990097' '25.316831683168317' '32.995049504950494'\n",
-      "  '38.257425742574256']\n",
-      " ['small-world_500_0' '161.2584830339321' '197.6087824351297'\n",
-      "  '144.54491017964068' '229.9720558882235' '151.95608782435127'\n",
-      "  '203.47405189620753']\n",
-      " ['barabasi_albert_30_0' '13.85483870967742' '6.951612903225808'\n",
-      "  '13.048387096774198' '9.85483870967742' '6.82258064516129'\n",
-      "  '13.241935483870968']\n",
-      " ['barabasi_albert_50_0' '10.450980392156861' '10.362745098039214'\n",
-      "  '11.588235294117645' '17.0' '9.980392156862745' '22.911764705882348']\n",
-      " ['barabasi_albert_100_0' '18.297029702970296' '24.20792079207921'\n",
-      "  '19.72772277227722' '25.52475247524752' '18.98019801980198'\n",
-      "  '46.925742574257434']\n",
-      " ['barabasi_albert_500_0' '86.52594810379239' '168.11776447105785'\n",
-      "  '85.93812375249499' '245.58283433133727' '84.07385229540918'\n",
-      "  '224.03592814371254']]\n"
+      "[['erdos_renyi_30_0' '11.612903225806452' '13.548387096774192' 'inf'\n",
+      "  'inf' '10.112903225806452' '13.580645161290324']\n",
+      " ['erdos_renyi_50_0' '19.990196078431378' '24.137254901960787' 'inf'\n",
+      "  'inf' '19.84313725490196' '23.264705882352942']\n",
+      " ['erdos_renyi_100_0' '48.940594059405946' '49.00990099009901' 'inf'\n",
+      "  'inf' '44.524752475247524' '48.460396039603964']\n",
+      " ['erdos_renyi_500_0' '247.0059880239521' '247.0059880239521' 'inf' 'inf'\n",
+      "  '246.90319361277446' '247.0059880239521']\n",
+      " ['barabasi_albert_30_0' '6.82258064516129' '8.20967741935484' 'inf'\n",
+      "  'inf' '6.82258064516129' '12.403225806451614']\n",
+      " ['barabasi_albert_50_0' '10.352941176470589' '18.245098039215687' 'inf'\n",
+      "  'inf' '9.96078431372549' '23.26470588235294']\n",
+      " ['barabasi_albert_100_0' '18.78217821782178' '36.32673267326733' 'inf'\n",
+      "  'inf' '18.98019801980198' '44.17821782178217']\n",
+      " ['barabasi_albert_500_0' '86.96706586826348' '187.26447105788424' 'inf'\n",
+      "  'inf' '84.0738522954092' '221.48303393213575']\n",
+      " ['erdos_renyi_30_1' '4.64516129032258' '9.96774193548387' 'inf' 'inf'\n",
+      "  '5.0' '11.161290322580646']\n",
+      " ['erdos_renyi_50_1' '14.833333333333334' '23.107843137254903' 'inf'\n",
+      "  'inf' '14.852941176470589' '21.284313725490193']\n",
+      " ['erdos_renyi_100_1' '38.54950495049505' '47.09405940594059' 'inf' 'inf'\n",
+      "  '37.82673267326733' '46.851485148514854']\n",
+      " ['erdos_renyi_500_1' '247.0059880239521' '247.0059880239521' 'inf' 'inf'\n",
+      "  '242.1207584830339' '247.0059880239521']\n",
+      " ['barabasi_albert_30_1' '5.467741935483872' '9.693548387096774' 'inf'\n",
+      "  'inf' '5.14516129032258' '9.887096774193548']\n",
+      " ['barabasi_albert_50_1' '5.960784313725491' '13.5' 'inf' 'inf'\n",
+      "  '6.019607843137256' '17.009803921568626']\n",
+      " ['barabasi_albert_100_1' '10.272277227722773' '23.698019801980195' 'inf'\n",
+      "  'inf' '10.470297029702971' '42.267326732673276']\n",
+      " ['barabasi_albert_500_1' '45.44710578842315' '135.16566866267465' 'inf'\n",
+      "  'inf' '43.82834331337326' '191.70658682634732']]\n",
+      "erdos_renyi_30_0 Finder 10.112903225806452\n",
+      "erdos_renyi_50_0 Finder 19.84313725490196\n",
+      "erdos_renyi_100_0 Finder 44.524752475247524\n",
+      "erdos_renyi_500_0 Finder 246.90319361277446\n",
+      "barabasi_albert_30_0 differentGraph 6.82258064516129\n",
+      "barabasi_albert_50_0 Finder 9.96078431372549\n",
+      "barabasi_albert_100_0 differentGraph 18.78217821782178\n",
+      "barabasi_albert_500_0 Finder 84.0738522954092\n",
+      "erdos_renyi_30_1 differentGraph 4.64516129032258\n",
+      "erdos_renyi_50_1 differentGraph 14.833333333333334\n",
+      "erdos_renyi_100_1 Finder 37.82673267326733\n",
+      "erdos_renyi_500_1 Finder 242.1207584830339\n",
+      "barabasi_albert_30_1 Finder 5.14516129032258\n",
+      "barabasi_albert_50_1 differentGraph 5.960784313725491\n",
+      "barabasi_albert_100_1 differentGraph 10.272277227722773\n",
+      "barabasi_albert_500_1 Finder 43.82834331337326\n"
      ]
     }
    ],
    "source": [
-    "attacker_differentGraph= torch.load('./model/DiffSize_Different_Graph/model_differentGraph_10000') \n",
-    "attacker_BATypeGraph= torch.load('./model/DiffSize_BA_Graph/model_BAGraph_10000')\n",
-    "attacker_ERTypeGraph= torch.load('./model/DiffSize_Eros_Graph/model_ErosGraph_10000')\n",
-    "attacker_SWTypeGraph= torch.load('./model/DiffSize_SmallWorld_Graph/model_SmallWorldGraph_10000')\n",
+    "attacker_differentGraph= torch.load('./model/DiffSize_Different_Graph/model_differentGraph_300000') \n",
+    "attacker_BATypeGraph= torch.load('./model/DiffSize_BA_Graph/model_BAGraph_300000')\n",
+    "attacker_ERTypeGraph= None#torch.load('./model/DiffSize_Eros_Graph/model_ErosGraph_30000')\n",
+    "attacker_SWTypeGraph= None#torch.load('./model/DiffSize_SmallWorld_Graph/model_SmallWorldGraph_100000')\n",
     "'''print(\"Different Graph\")\n",
     "print(\"Target\")\n",
     "for param in attacker_differentGraph._target_q_network.parameters():\n",
@@ -1603,20 +1620,11 @@
     "for param in attacker_differentGraph._q_network.parameters():\n",
     "    print(param)'''\n",
     "AUC = AUC_evaluation(attacker_differentGraph, attacker_BATypeGraph,attacker_ERTypeGraph,attacker_SWTypeGraph)\n",
-    "print(AUC)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "183c8c26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attacker_differentGraph= torch.load('./model/DiffSize_Different_Graph/model_differentGraph_30000') \n",
-    "attacker_BATypeGraph= torch.load('./model/DiffSize_BA_Graph/model_BAGraph_40000')\n",
-    "attacker_ERTypeGraph= torch.load('./model/DiffSize_Eros_Graph/model_ErosGraph_30000')\n",
-    "attacker_SWTypeGraph= torch.load('./model/DiffSize_SmallWorld_Graph/model_SmallWorldGraph_100000')"
+    "print(AUC)\n",
+    "file = ['differentGraph','BAGraph','ERGraph','SWGraph','Finder','Random']\n",
+    "for i in range(AUC.shape[0]):\n",
+    "    best = np.argmin(AUC[i,1:].astype(float))\n",
+    "    print(AUC[i,0],file[best],AUC[i,best+1])"
    ]
   },
   {
@@ -1629,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b8b355a6",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1647,7 @@
        "'path = \"/home/bhandk/Desktop/MAS/FINDER/MaxCCList_Strategy_\"\\nfile_name = [\"test\",\"testTrain\",\"corruption\",\"foodweb-baywet\",\"inf-USAir97\",\"moreno_crime_projected\"]\\n\\nfor f in file_name:\\n    fname = path+f+\".txt\"\\n    data = np.loadtxt(fname)\\n    plt.plot(np.arange(len(data)),data,color=\"blue\")\\n    plt.ylabel(\"GCC\")\\n    plt.xlabel(\"Nodes\")\\n    plt.title(\"JUST FINDER: \"+f)\\n    #plt.savefig(\"./figure/FINDER_\"+f)\\n    plt.show()'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
