Constant Epsilon with just 3 centrality feature

--- a/Synthetic_Evaluation.ipynb
+++ b/Synthetic_Evaluation.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "id": "eb84cd98",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1275,7 @@
     "    file_list = []\n",
     "    number = [0,1] \n",
     "    #graph_type = ['erdos_renyi','small-world', 'barabasi_albert']\n",
-    "    graph_type = ['erdos_renyi','barabasi_albert']\n",
+    "    graph_type = ['barabasi_albert']\n",
     "    #graph_type = ['barabasi_albert']\n",
     "    noderange = [30, 50, 100, 500]\n",
     "    for num in number:\n",
@@ -1538,70 +1538,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "5da1ef6c",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 58,
+   "id": "dfeaf5d5",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['erdos_renyi_30_0' '11.612903225806452' '13.548387096774192' 'inf'\n",
-      "  'inf' '10.112903225806452' '13.580645161290324']\n",
-      " ['erdos_renyi_50_0' '19.990196078431378' '24.137254901960787' 'inf'\n",
-      "  'inf' '19.84313725490196' '23.264705882352942']\n",
-      " ['erdos_renyi_100_0' '48.940594059405946' '49.00990099009901' 'inf'\n",
-      "  'inf' '44.524752475247524' '48.460396039603964']\n",
-      " ['erdos_renyi_500_0' '247.0059880239521' '247.0059880239521' 'inf' 'inf'\n",
-      "  '246.90319361277446' '247.0059880239521']\n",
-      " ['barabasi_albert_30_0' '6.82258064516129' '8.20967741935484' 'inf'\n",
-      "  'inf' '6.82258064516129' '12.403225806451614']\n",
-      " ['barabasi_albert_50_0' '10.352941176470589' '18.245098039215687' 'inf'\n",
-      "  'inf' '9.96078431372549' '23.26470588235294']\n",
-      " ['barabasi_albert_100_0' '18.78217821782178' '36.32673267326733' 'inf'\n",
-      "  'inf' '18.98019801980198' '44.17821782178217']\n",
-      " ['barabasi_albert_500_0' '86.96706586826348' '187.26447105788424' 'inf'\n",
-      "  'inf' '84.0738522954092' '221.48303393213575']\n",
-      " ['erdos_renyi_30_1' '4.64516129032258' '9.96774193548387' 'inf' 'inf'\n",
-      "  '5.0' '11.161290322580646']\n",
-      " ['erdos_renyi_50_1' '14.833333333333334' '23.107843137254903' 'inf'\n",
-      "  'inf' '14.852941176470589' '21.284313725490193']\n",
-      " ['erdos_renyi_100_1' '38.54950495049505' '47.09405940594059' 'inf' 'inf'\n",
-      "  '37.82673267326733' '46.851485148514854']\n",
-      " ['erdos_renyi_500_1' '247.0059880239521' '247.0059880239521' 'inf' 'inf'\n",
-      "  '242.1207584830339' '247.0059880239521']\n",
-      " ['barabasi_albert_30_1' '5.467741935483872' '9.693548387096774' 'inf'\n",
-      "  'inf' '5.14516129032258' '9.887096774193548']\n",
-      " ['barabasi_albert_50_1' '5.960784313725491' '13.5' 'inf' 'inf'\n",
-      "  '6.019607843137256' '17.009803921568626']\n",
-      " ['barabasi_albert_100_1' '10.272277227722773' '23.698019801980195' 'inf'\n",
-      "  'inf' '10.470297029702971' '42.267326732673276']\n",
-      " ['barabasi_albert_500_1' '45.44710578842315' '135.16566866267465' 'inf'\n",
-      "  'inf' '43.82834331337326' '191.70658682634732']]\n",
-      "erdos_renyi_30_0 Finder 10.112903225806452\n",
-      "erdos_renyi_50_0 Finder 19.84313725490196\n",
-      "erdos_renyi_100_0 Finder 44.524752475247524\n",
-      "erdos_renyi_500_0 Finder 246.90319361277446\n",
-      "barabasi_albert_30_0 differentGraph 6.82258064516129\n",
+      "[['barabasi_albert_30_0' '6.82258064516129' '6.499999999999999' 'inf'\n",
+      "  'inf' '6.82258064516129' '14.14516129032258']\n",
+      " ['barabasi_albert_50_0' '10.411764705882353' '11.362745098039214' 'inf'\n",
+      "  'inf' '9.96078431372549' '22.705882352941174']\n",
+      " ['barabasi_albert_100_0' '19.712871287128714' '20.03465346534653' 'inf'\n",
+      "  'inf' '18.98019801980198' '44.37128712871287']\n",
+      " ['barabasi_albert_500_0' '86.96706586826348' '86.71357285429141' 'inf'\n",
+      "  'inf' '84.0738522954092' '226.4491017964072']\n",
+      " ['barabasi_albert_30_1' '5.14516129032258' '7.564516129032258' 'inf'\n",
+      "  'inf' '5.14516129032258' '9.5']\n",
+      " ['barabasi_albert_50_1' '6.0392156862745106' '6.058823529411765' 'inf'\n",
+      "  'inf' '6.019607843137256' '19.401960784313726']\n",
+      " ['barabasi_albert_100_1' '10.915841584158416' '10.767326732673268' 'inf'\n",
+      "  'inf' '10.470297029702971' '38.84653465346534']\n",
+      " ['barabasi_albert_500_1' '45.44710578842315' '43.616766467065865' 'inf'\n",
+      "  'inf' '43.82834331337326' '211.43512974051893']]\n",
+      "barabasi_albert_30_0 BAGraph 6.499999999999999\n",
       "barabasi_albert_50_0 Finder 9.96078431372549\n",
-      "barabasi_albert_100_0 differentGraph 18.78217821782178\n",
+      "barabasi_albert_100_0 Finder 18.98019801980198\n",
       "barabasi_albert_500_0 Finder 84.0738522954092\n",
-      "erdos_renyi_30_1 differentGraph 4.64516129032258\n",
-      "erdos_renyi_50_1 differentGraph 14.833333333333334\n",
-      "erdos_renyi_100_1 Finder 37.82673267326733\n",
-      "erdos_renyi_500_1 Finder 242.1207584830339\n",
-      "barabasi_albert_30_1 Finder 5.14516129032258\n",
-      "barabasi_albert_50_1 differentGraph 5.960784313725491\n",
-      "barabasi_albert_100_1 differentGraph 10.272277227722773\n",
-      "barabasi_albert_500_1 Finder 43.82834331337326\n"
+      "barabasi_albert_30_1 differentGraph 5.14516129032258\n",
+      "barabasi_albert_50_1 Finder 6.019607843137256\n",
+      "barabasi_albert_100_1 Finder 10.470297029702971\n",
+      "barabasi_albert_500_1 BAGraph 43.616766467065865\n"
      ]
     }
    ],
    "source": [
-    "attacker_differentGraph= torch.load('./model/DiffSize_Different_Graph/model_differentGraph_300000') \n",
-    "attacker_BATypeGraph= torch.load('./model/DiffSize_BA_Graph/model_BAGraph_300000')\n",
+    "attacker_differentGraph= torch.load('./model/DiffSize_Different_Graph/model_differentGraph_150000') \n",
+    "attacker_BATypeGraph= torch.load('./model/DiffSize_BA_Graph/model_BAGraph_10000')\n",
     "attacker_ERTypeGraph= None#torch.load('./model/DiffSize_Eros_Graph/model_ErosGraph_30000')\n",
     "attacker_SWTypeGraph= None#torch.load('./model/DiffSize_SmallWorld_Graph/model_SmallWorldGraph_100000')\n",
     "'''print(\"Different Graph\")\n",
