Removed MultiAgent FrameWork

--- a/Training_DiffSize_BA_Graph.ipynb
+++ b/Training_DiffSize_BA_Graph.ipynb
@@ -44,136 +44,7 @@
     "outputId": "1c846875-85d4-4284-c66e-d618b4eadb74",
     "scrolled": false
    },
-<<<<<<< Updated upstream
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "wandb version 0.13.5 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.12.21"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/bhandk/AttackandDefend/wandb/run-20221111_134050-dyxwzgrr</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/bhandk/Attack_and_Defense_Same_Graph_Type/runs/dyxwzgrr\" target=\"_blank\">11/11/2022 13:40:50</a></strong> to <a href=\"https://wandb.ai/bhandk/Attack_and_Defense_Same_Graph_Type\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 15%|███████▊                                            | 74581/500000 [4:13:55<17:37:55,  6.70it/s]wandb: Network error (ConnectTimeout), entering retry loop.\n",
-      "100%|█████████████████████████████████████████████████████| 500000/500000 [32:00:58<00:00,  4.34it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Evaluation_Dataset</td><td>▇▂▆▆▆▄▅▇▇▅▆▆▄▅▃▆▄▅█▆▆▆▆▆▇▅▇▄▄▅▅▃▁▁▁▂▃▁▃▃</td></tr><tr><td>cummulative_reward</td><td>▇▄▅▆▆▇▅▄▅▁▄▆█▅▄▇▇▅▇▄▅▆▄▅▅▆▄▅▁▅▇▆▆▅▆█▅▄▃▄</td></tr><tr><td>epsilon</td><td>██▇▇▇▆▆▆▆▅▅▅▅▅▄▄▄▄▄▃▃▃▃▃▃▂▂▂▂▂▂▂▂▂▁▁▁▁▁▁</td></tr><tr><td>loss</td><td>▆▄▃▇▃▅▅▅▅▇▃▅▄▄▆▄▅▃▄▇▃▅▄▃▂▄▅▇▆▆▅▇▃▅█▄▂▅▃▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Evaluation_Dataset</td><td>11.0314</td></tr><tr><td>cummulative_reward</td><td>1.62023</td></tr><tr><td>epsilon</td><td>0.24483</td></tr><tr><td>loss</td><td>0.01307</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Synced <strong style=\"color:#cdcd00\">11/11/2022 13:40:50</strong>: <a href=\"https://wandb.ai/bhandk/Attack_and_Defense_Same_Graph_Type/runs/dyxwzgrr\" target=\"_blank\">https://wandb.ai/bhandk/Attack_and_Defense_Same_Graph_Type/runs/dyxwzgrr</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>./wandb/run-20221111_134050-dyxwzgrr/logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-=======
    "outputs": [],
->>>>>>> Stashed changes
    "source": [
     "\"\"\"DQN agents trained on Breakthrough by independent Q-learning.\"\"\"\n",
     "from utils.environment.game import GraphGame\n",
@@ -212,6 +83,7 @@
     "    env = Environment(game)\n",
     "    size_CV = params.validation_test_size\n",
     "    CV_AUC = []\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    if agent == None:\n",
     "        agent = DQN(\n",
     "                state_representation_size=params.centrality_features,\n",
@@ -318,7 +190,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
